--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,33 @@
-name: flutter_html
-description: "A new Flutter project."
+name: flutter_html_new
+description: "Package for render and customize html in flutter"
 version: 0.0.1
-homepage:
+author: Ahmad Ayman <ahmed.ayman1708@gmail.com>
+homepage: https://github.com/Ahmad-Ayman/flutter_html_new.git
 
 environment:
   sdk: ^3.5.3
-  flutter: ">=1.17.0"
+  flutter: ">=2.2.0"
 
 dependencies:
   flutter:
     sdk: flutter
+    # Plugin for parsing html
+  html: '>=0.15.0 <1.0.0'
+
+  # Plugin for parsing css
+  csslib: '>=0.17.0 <1.0.0'
+
+  # Plugin for firstWhereOrNull extension on lists
+  collection: '>=1.15.0 <2.0.0'
+
+  # plugin to convert integers to numerals
+  numerus: '>=2.0.0 <3.0.0'
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  meta: ^1.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
